@@ -1,6 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
- <head><title>%(page_title)s</title></head>
+ <head>
+  <title>%(page_title)s</title>
+  <meta name="robots" content="noindex,nofollow">
+ </head>
  <body>
   <table cellpadding=5 width="100%%">
     <tr align=left valign=bottom>
